--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -35,6 +35,16 @@ JSystem/JUtility/JUTProcBar.cpp:
 JSystem/JSupport/JSUList.cpp:
     .text: [0x80078b2c, 0x800790d0]
 
+JSystem/JKernel/JKRArchivePri.cpp:
+    .text: [0x8007bf04, 0x8007cb10]
+    .sbss: [0x804158f0, 0x804158f8]
+
+JSystem/JKernel/JKRArchivePub.cpp:
+    .text: [0x8007cb10, 0x8007d734]
+    .rodata: [0x80366998, 0x803669c8]
+    .data: [0x8038b1e0, 0x8038b230]
+    .sdata2: [0x80417a38, 0x80417a48]
+
 JSystem/JKernel/JKRDecomp.cpp:
     .text: [0x8007e550, 0x8007ec74]
     .rodata: [0x80366aa0, 0x80366ac8]
@@ -60,8 +70,6 @@ JSystem/JKernel/JKRDvdRipper.cpp:
     .sdata: [0x80414088, 0x80414090]
     .sbss: [0x80415948, 0x80415988]
     .sdata2: [0x80417aa0, 0x80417ab0]
-
-
 
 Dolphin/__ppc_eabi_init.s:
     .text: [0x800f31d8, 0x800f322c]
