--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -160,6 +160,9 @@ Kaneshige/RaceInfo.cpp:
     .sbss: [0x804163d0, 0x804163d8]
     .sdata2: [0x8041a028, 0x8041a030]
 
+Kaneshige/JugemPoint.cpp:
+    .text: [0x801ba2a4, 0x801ba2b4]
+
 Kaneshige/RaceTime.cpp:
     .text: [0x801d9e4c, 0x801d9ea0]
 
@@ -189,7 +192,6 @@ Osako/main.cpp:
     #.bss: [0x803d08f0, 0x803d0920]
     #.sbss: [0x80416968, 0x80416998]
     #.sdata2: [0x8041b688, 0x8041b6e8]
-
 
 Osako/kartPad.cpp:
     .text: [0x801fff8c, 0x80200a28]
