--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,3 +69,8 @@ jobs:
           Remove-Item '.\tools\2.5\' -Recurse
           Remove-Item '.\tools\1.2.5\' -Recurse
           Remove-Item '.\tools\devkitppc\' -Recurse
+          # Remove Items from build
+          ninja -t clean
+          Remove -Item '.\include\BuildtimeDat.bin'
+          Remove -Item '.\include\System.arc.bin'
+          Remove -Item '.\include\JSystem\JUtility\FontData\Ascfont_fix12.bfn'
