--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -138,6 +138,14 @@ JSystem/JKernel/JKRFileLoader.cpp:
     .sbss: [0x804159a0, 0x804159a8]
     .sdata2: [0x80417af0, 0x80417af8]
 
+JSystem/JKernel/JKRHeap.cpp:
+    .text: [0x80083e20, 0x800853bc]
+    .rodata: [0x803670e8, 0x803673a8]
+    .data: [0x8038b418, 0x8038b478]
+    .sdata: [0x80414098, 0x804140a0]
+    .sbss: [0x804159a8, 0x804159d0]
+    .sdata2: [0x80417af8, 0x80417b18]
+
 JSystem/JKernel/JKRThread.cpp:
     .text: [0x80086734, 0x8008724c]
     .ctors: [0x803160ec, 0x803160f0]
