--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,12 +31,22 @@ jobs:
 
       - name: Get dependencies
         env:
-          SECRET_DEPS: ${{ secrets.BUILD_DEPS }}
+          SECRET_CLIENT: ${{ secrets.SFTP_CLIENT }}
+          SECRET_ADDRESS: ${{ secrets.SFTP_ADDRESS }}
+          SECRET_PORT: ${{ secrets.SFTP_PORT }}
+          SECRET_UNAME: ${{ secrets.SFTP_USERNAME }}
+          SECRET_PW: ${{ secrets.SFTP_PASSWORD }}
         run: |        
-          # Download build dependencies
-          Invoke-WebRequest "$env:SECRET_DEPS" -OutFile .\build-dependencies.zip
+          # Download sftp client zip
+          Invoke-WebRequest "$env:SECRET_CLIENT" -OutFile .\sftp.zip
+          # Extract SFTP client
+          Expand-Archive sftp.zip
+          # Download and extract all tools and required files
+          .\sftp\sftp-client.exe "$env:SECRET_ADDRESS" "$env:SECRET_PORT" "$env:SECRET_UNAME" "$env:SECRET_PW"
           Expand-Archive -Path build-dependencies.zip .\ 
           # Clean up
+          Remove-Item '.\sftp.zip'
+          Remove-Item '.\sftp\' -Recurse
           Remove-Item '.\build-dependencies.zip'
           
       - name: Configure ninja build file
