--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -198,11 +198,11 @@ Kaneshige/KartChecker.cpp:
     .sdata2: [0x80419dd0, 0x80419e18]
 
 #Kaneshige/RaceMgr.cpp:
-    #.text: [0x801ac5a0, 0x801ad164]
-    #.ctors: [0x8031627c, 0x80316280]
+    #.text: [0x801ac5a0, 0x801b0c1c]
+    ##.ctors: [0x8031627c, 0x80316280]
     #.rodata: [0x80377640, 0x803780c0]
     #.data: [0x80395cd8, 0x80395cf8]
-    #.bss: [0x803ca828, 0x803ca858] 
+    ##.bss: [0x803ca828, 0x803ca858] 
     #.sdata: [0x80414628, 0x80414630]
     #.sbss: [0x804163a8, 0x804163b0]
     #.sdata2: [0x80419e18, 0x80419f88]
