--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,13 @@ jobs:
           # Remove files stored in build-dependencies
           Remove-Item '.\orig\MarioClub_us\main.dol'
           Remove-Item '.\out\' -Recurse        
-          Remove-Item '.\tools\' -Recurse
+          Remove-Item '.\tools\1.2.5\' -Recurse
+          Remove-Item '.\tools\1.2.5e\' -Recurse
+          Remove-Item '.\tools\1.3.2\' -Recurse
+          Remove-Item '.\tools\2.0\' -Recurse
+          Remove-Item '.\tools\2.5\' -Recurse
+          Remove-Item '.\tools\2.6\' -Recurse
+          Remove-Item '.\tools\devkitppc\' -Recurse
           # Remove Items from build
           ninja -t clean
           Remove-Item '.\include\BuildtimeDat.bin'
